Fix icon alignment in fieldset legend

--- a/Radzen.Blazor/themes/components/blazor/_fieldset.scss
+++ b/Radzen.Blazor/themes/components/blazor/_fieldset.scss
@@ -88,6 +88,8 @@ $fieldset-toggle-border: none !default;
   font-size: var(--rz-fieldset-legend-font-size);
 
   a {
+    display: inline-flex;
+    align-items: center;
     color: inherit;
     text-decoration: none;
   }
